--- a/README.mkd
+++ b/README.mkd
@@ -1,19 +1,17 @@
 Grunt init template for generating projects that will have:
 
-- coffescript
-- source maps
 - commonjs
+- source maps
 - umd
 - mocha(node and phantomjs)
-- browserify
 
 Instructions:
 
 ```sh
 npm install -g grunt-init
-git clone git://github.com/tarruda/grunt-init-umd-commonjs-coffee ~/.grunt-init/umd-commonjs-coffee
+git clone git://github.com/tarruda/grunt-init-js-commonjs ~/.grunt-init/js-commonjs
 mkdir project_name
 cd project_name
-grunt-init umd-commonjs-coffee
+grunt-init js-commonjs
 npm install
 ```
